--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body class="h-screen flex items-center justify-center bg-gray-100">
-    <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md space-y-2 sm:flex sm:items-center sm:py-4 sm:space-y-0 sm:spce-x-6">
-        <img class="h-24 md:w-32 lg:w-48 mx-auto rounded-full ring-4 ring-green-400 sm:mx-0 sm:flex-shrink-0" src="/images/images.png" alt="" />
-        <div class="text-center space-y-2 sm:text-left">
+    <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md space-y-2">
+        <img class="h-24 mx-auto rounded-full ring-4 ring-green-400" src="/images/download.png" alt="Logo" />
+        <div class="text-center space-y-2">
             <div class="space-y-0.5">
                 <p class="text-lg text-black font-semibold">Learn with Sumit</p>
                 <p class="text-gray-500 font-medium">Youtube Channel</p>
             </div>
-            <button class="px-4 py-1 border border-purple-200 rounded-full text-sm text-purple-600 font-semibold">
+            <button class="px-4 py-1 border border-purple-600 rounded-full text-sm text-purple-600 font-semibold">
           Visit Now
         </button>
         </div>
