--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
     <link rel="stylesheet" href="./output/tailwind.css" />
 </head>
 
-<body class="h-screen flex items-center justify-center bg-gray-100">
-    <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md space-y-2 sm:flex sm:items-center sm:py-4 sm:space-y-0 sm:space-x-6">
-        <img class="h-24 mx-auto rounded-full ring-4 ring-green-400 sm:mx-0 sm:flex-shrink-0" src="/images/download.png" alt="Logo" />
+<body class="h-screen flex items-center justify-center bg-gray-100 dark:bg-gray-900">
+    <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md space-y-2 sm:flex sm:items-center sm:py-4 sm:space-y-0 sm:space-x-6 dark:bg-gray-800">
+        <img class="h-24 mx-auto rounded-full ring-4 ring-green-400 sm:mx-0 sm:flex-shrink-0 transform hover:scale-105 duration-500" src="/images/download.png" alt="Logo" />
         <div class="text-center space-y-2 sm:text-left">
             <div class="space-y-0.5">
-                <p class="text-lg text-black font-semibold">Learn with Sumit</p>
-                <p class="text-gray-500 font-medium">Youtube Channel</p>
+                <p class="text-lg dark:text-gray-300 text-black font-semibold">
+                    Learn with Sumit
+                </p>
+                <p class="text-gray-500 dark:text-gray-400 font-medium">
+                    Youtube Channel
+                </p>
             </div>
-            <button class="px-4 py-1 border border-purple-600 rounded-full text-sm text-purple-600 font-semibold">
+            <button class="px-4 py-1 border dark:text-purple-400 border-purple-600 rounded-full text-sm text-purple-600 font-semibold hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">
           Visit Now
         </button>
         </div>
